--- a/pages/ErrorPage/errorPage.css
+++ b/pages/ErrorPage/errorPage.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 68.5px - 50.5px);
 }
 
 .me404 {
